# schwab-brokerage-director

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: session-start.sh
config/: target_allocation.yaml
recommendations/: 2026-04-18.md  2026-04-20.md
scripts/: fetch_holdings.py  local_dry_run.py  market_context.py  post_discord.py  relink_snaptrade.py  setup_snaptrade.py
tests/: test_fetch_holdings.py  test_local_dry_run.py  test_market_context.py  test_post_discord.py  test_setup_snaptrade.py
tests/fixtures/: example_recommendation.md  holdings.json  holdings_raw.json  market_context.json  yfinance_raw.json
